--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -208,6 +208,9 @@ thead th {
   content: "";
 }
 
+.border-light-blue {
+  border-bottom-color: #50D1FF;
+}
 
 .show-more-button {
   @apply .mx-auto .bg-theme-button .text-theme-button-text .semibold .py-5 .px-8 .border-transparent .rounded
@@ -288,7 +291,7 @@ thead th {
 }
 
 .active-tab {
-  @apply .base-tab .text-lg .border-blue .text-theme-text-primary
+  @apply .base-tab .text-lg .border-light-blue .text-theme-text-primary
 }
 
 .inactive-tab {
@@ -297,7 +300,7 @@ thead th {
 
 .active-tab:hover,
 .inactive-tab:hover {
-  @apply .text-theme-text-primary .border-blue
+  @apply .text-theme-text-primary .border-light-blue
 }
 
 @screen sm {
@@ -341,5 +344,39 @@ thead th {
 }
 
 .menu-button:hover {
-  @apply .border-red
+  @apply .border-light-blue
+}
+
+.hover\:border-light-blue:hover {
+  @apply .border-light-blue
+}
+
+.bg-darkest-blue {
+  background: #24274F;
+}
+
+.temp-graph-main-content {
+  position: relative;
+}
+
+.temp-graph-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, .6);
+  height: 100%;
+}
+
+.temp-graph-placeholder {
+  position: absolute;
+  margin: auto;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+  font-size: 36px;
+  color: #24274f;
 }
